Add support for annotation processor injection